workshop03/bggapp1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp1-deploy
  labels:
    name: bggapp1-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      name: bggapp1-pod
  template:
    metadata:
      name: bggapp1-pod
      labels:
        name: bggapp1-pod
    spec:
      containers:
        - name: bggapp1-container
          image: stackupiss/bgg-backend:v1
          imagePullPolicy: IfNotPresent
          args:
          - --prefix=/v1
          ports:
          - name: bggapp1-port
            containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 64Mi

---
apiVersion: v1
kind: Service
metadata:
  name: bggapp1-svc
  labels:
    name: bggapp1-svc
spec:
  type: ClusterIP
  selector:
    name: bggapp1-pod
  ports:
    - port: 3000
      targetPort: bggapp1-port
