workshop03/bgg-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    name: bgg-ing
spec:
  ingressClassName: nginx
  rules:
  - host: 144.126.241.223.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service: 
            name: bggapp1-svc
            port:
              number: 3000
      - path: /v2
        pathType: Prefix
        backend:
          service: 
            name: bggapp2-svc
            port:
              number: 3000
